--- a/media-queries-LAPTOP-B40VQ0HD-9.css
+++ b/media-queries-LAPTOP-B40VQ0HD-9.css
@@ -2,17 +2,17 @@
 
 @media (min-width: 800px) and (max-width: 1260px) {
 	.intro-image {
-		width: 550px;
+		width: 600px;
 		height: 360px;
 	}
 
 	.intro-info,
 	.bio {
-		width: 70%;
+		display: flex;
+		justify-content: center;
+		flex-direction: column;
+		align-items: center;
+		width: 50%;
 		margin: 0 auto;
-	}
-
-	.about-video {
-		width: 500px;
 	}
 }
