made some changes to the design of the website

--- a/media-queries.css
+++ b/media-queries.css
@@ -207,6 +207,7 @@
 		padding-left: 1rem;
 		padding-right: 1rem;
 		margin-top: 0;
+		width: 100%;
 	}
 
 	.important-research-info .research-video-resoures {
