made some changes to the width of some of the containers

--- a/media-queries.css
+++ b/media-queries.css
@@ -148,6 +148,7 @@
 	.sub-intro-info {
 		background-color: #ffffff;
 		width: 100%;
+		height: 40vh;
 	}
 
 	img.intro-image {
@@ -196,7 +197,8 @@
 		font-weight: 800;
 		padding-left: 0;
 		padding-right: 0;
-		width: 93%;
+		width: 90%;
+		margin-left: 1rem;
 	}
 
 	.about {
@@ -215,16 +217,17 @@
 	}
 
 	.important-research-info {
-		border-top: 1px solid #999;
-		height: 90vh;
+		border-top: 1px solid #fff;
+		height: 80vh;
 		padding-left: 1rem;
 		padding-right: 1rem;
 		margin-top: 0;
+		margin-bottom: 8rem;
 	}
 
 	.important-research-info ul {
 		width: 90%;
-		margin-left: 1rem;
+		margin-left: 0;
 	}
 
 	.important-research-info ul li {
@@ -236,9 +239,4 @@
 		font-size: 1rem;
 		font-weight: 400;
 	}
-
-	/* #research .important-research-info {
-		width: 95%;
-		margin: 0 auto;
-	} */
 }
