--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ img.intro-image {
 	line-height: 2rem;
 	text-align: center;
 	text-align-last: center;
-	color: #999;
+	color: #fbfbfc;
 	padding: 0 2rem;
 }
 
