corrected a few info

--- a/style.css
+++ b/style.css
@@ -214,7 +214,7 @@ img.intro-image {
 	margin-bottom: 1rem;
 	margin-left: 2rem;
 	margin-right: 2rem;
-	color: #999;
+	color: #fbfbfc;
 }
 
 .content-container ul li span,
