--- a/media-queries.css
+++ b/media-queries.css
@@ -37,27 +37,33 @@
 	}
 
 	.sub-intro-info {
-		height: 45vh;
-		width: 73%;
+		background-color: #ffffff;
+		width: 100%;
+		height: 40vh;
 	}
 
 	img.intro-image {
-		width: 420px;
-		height: 230px;
-		margin-bottom: 0;
+		width: 460px;
+		height: 200px;
+		object-fit: cover;
+		top: -195px;
 	}
 
 	.bio img {
-		height: 230px;
-		width: 230px;
+		height: 20px;
+		width: 200px;
 	}
 
-	.intro-info,
 	.bio,
 	#research {
 		width: 80%;
 		margin: 0 auto;
 		margin-top: 1rem;
+	}
+
+	.intro-info {
+		width: 90%;
+		margin: 0 auto;
 	}
 
 	.about-video {
@@ -69,7 +75,7 @@
 	.about-p1,
 	.about-p2 {
 		font-size: 1rem;
-		line-height: 1.2rem;
+		line-height: 1.3rem;
 	}
 
 	.intro-p2 {
@@ -87,10 +93,47 @@
 		text-align: start;
 	}
 
+	#research {
+		width: 100%;
+	}
+
+	#research .research-video-resoures,
+	#research .research-buttons,
+	#research .content-container {
+		width: 85%;
+		margin: auto 0;
+		margin-left: 2rem;
+	}
+
 	#research .research-h1 {
-		margin-bottom: 1rem;
+		margin-bottom: 0.8rem;
 		font-size: 1.2rem;
 		font-weight: 800;
+		padding-left: 0;
+		padding-right: 0;
+		width: 90%;
+		margin-left: 1rem;
+	}
+	#research {
+		width: 100%;
+	}
+
+	#research .research-video-resoures,
+	#research .research-buttons,
+	#research .content-container {
+		width: 85%;
+		margin: auto 0;
+		margin-left: 2rem;
+	}
+
+	#research .research-h1 {
+		margin-bottom: 0.8rem;
+		font-size: 1.2rem;
+		font-weight: 800;
+		padding-left: 0;
+		padding-right: 0;
+		width: 90%;
+		margin-left: 1rem;
 	}
 
 	.r-button {
@@ -100,7 +143,7 @@
 	}
 
 	.important-research-info {
-		height: 65vh;
+		height: 75vh;
 		padding-left: 1rem;
 		padding-right: 1rem;
 	}
@@ -125,7 +168,7 @@
 
 .important-research-info ul li {
 	width: 95%;
-	margin-left: 1.5rem;
+	margin-left: 2rem;
 }
 
 .important-research-info .research-video-resoures {
